--- a/CustomControlsLibrary/Viewer/Footer.xaml
+++ b/CustomControlsLibrary/Viewer/Footer.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CustomControlsLibrary.Viewer"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="30" MaxHeight="30" d:DesignWidth="300">
     <Grid>
             
     </Grid>
