--- a/CustomControlsLibrary/Viewer/LateralNav.xaml
+++ b/CustomControlsLibrary/Viewer/LateralNav.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CustomControlsLibrary.Viewer"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="100">
     <Grid>
-            
+        <ListView x:Name="_view"></ListView>
     </Grid>
 </UserControl>
